# matplotlive

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  genindex.html  index.html  live_plot.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sketch.html  stream_sine.py  tox.ini
.doctrees/: environment.pickle  index.doctree  live_plot.doctree  sketch.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: index.rst.txt  live_plot.rst.txt  sketch.rst.txt
docs/: conf.py  environment.yml
examples/: raw_sketch_updates.py  sine_waves.py  sine_waves_raw.py  sine_waves_sketch.py  streaming_client.py  streaming_server.py
matplotlive/: __init__.py  exceptions.py  live_plot.py  recent_past.py  sketch.py
tests/: test_live_plot.py  test_sketch.py
