[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matplotlive"
readme = "README.md"
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@inria.fr"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@inria.fr"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib >=3.3.4",
    "numpy >=1.15.4",
]

[project.urls]
Homepage = "https://github.com/stephane-caron/matplotlive"
Source = "https://github.com/stephane-caron/matplotlive"
Tracker = "https://github.com/stephane-caron/matplotlive/issues"
Changelog = "https://github.com/stephane-caron/matplotlive/blob/main/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "matplotlive"

[tool.flit.sdist]
exclude = [
    "**/tests/*",
    ".git*",
    "docs/",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.lint.pydocstyle]
convention = "google"
